# kaggle-wheat-detection

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb
notebooks/: eda.ipynb
src/: dataset.py
